--- a/src/index.pug
+++ b/src/index.pug
@@ -4,5 +4,7 @@ html
         meta(charset = "utf-8")
         meta(name = "viewport", content = "initial-scale = 1.0, width = device - width")
         title aaa
+        div(class = "container")
+            header(class = "nav")
+            img(src = "./images/Logo.svg")
         body
-            h1 test
