--- a/src/index.pug
+++ b/src/index.pug
@@ -6,5 +6,12 @@ html
         title aaa
         div(class = "container")
             header(class = "nav")
-            img(src = "./images/Logo.svg")
+                img(class = "nav__logo" src = "./images/Logo.svg")
+                span О нас
+                span Услуги
+                span Вакансии
+                span Новости
+                span Соглашения
+                button Войти
+                button Зарегистрироваться
         body
