header is ready (not responsive)

--- a/src/index.pug
+++ b/src/index.pug
@@ -16,6 +16,8 @@ html
                             li(class = "header__navLink") Новости
                             li(class = "header__navLink") Соглашения
                     div(class="header__authorization")
-                        button Войти
-                        button Зарегистрироваться
+                        button(class="authorization__login-btn")
+                            span Войти
+                        button(class="authorization__registration-btn")
+                            span Зарегистрироваться
         body
