--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -59,6 +59,19 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: inherit; }
 
 /*--------------------*/
+%downArrow::after{
+  content: "";
+  position: absolute;
+  border: solid rgba(31, 32, 65, 0.5);
+  padding: 3px;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  right: 0px;
+  top: 50%;
+  margin: -5px -17px 0px 0px
+}
+
 @font-face {
   font-family: 'montserrat';
   src: url("../fonts/montserrat-400-normal.eot");
@@ -96,6 +109,7 @@ h1, h2, h3, h4, h5, h6 {
     grid-area: logo;
   }
   &__navList{
+    margin-right: -10px;
   }
   &__items{
     grid-area: navList;
@@ -104,13 +118,18 @@ h1, h2, h3, h4, h5, h6 {
   }
   &__navLink{
     display: inline-block;
-    padding-right: 20px;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    line-height: 17.07px;
+    position: relative;
+    color:rgba(31, 32, 65, 0.5);
+    margin-right: 17px;
+    &:nth-child(2){
+      @extend %downArrow;
+      margin-right: 40.5px;
+    }
+    &:nth-child(5){
+      @extend %downArrow;
+      margin-right: 41.5px;
+    }
     &_active{
-      font-weight: bold;
-      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      color: rgba(31, 32, 65, 0.75);
       font-weight: bold;
     }
   }
@@ -118,17 +137,43 @@ h1, h2, h3, h4, h5, h6 {
     grid-area: authorization;
     justify-self: end;
     button{
-      background: linear-gradient(to bottom, #BC9CFF, #8BA4F9);
       border-radius: 20px;
-      padding: 11px 11px 9px 9px;
-      font-weight: bold;
       font-size: 12px;
-      color: #fff;
       text-transform: uppercase;
+      font-weight: 700;
     }
   }
 }
 
+.authorization__registration-btn{
+  background: linear-gradient(to bottom, #BC9CFF, #8BA4F9);
+  color: #fff;
+  padding: 9px 20px 10px 19.5px;
+}
+.authorization__login-btn{
+  background: #fff;
+  color: #BC9CFF;
+  margin-right: 18.5px;
+  padding: 7px 0px 8px 0px;
+  span{
+    position: relative;
+    border-radius: 20px;
+    background: #fff;
+    padding: 7px 19px 8px 17.5px;
+    z-index: 1;
+  }
+  span::before{
+    content: "";
+    position: absolute;
+    top: -2px;
+    bottom: -2px;
+    left: -2px;
+    right: -2px;
+    background: linear-gradient(to bottom, #BC9CFF, #8BA4F9);
+    border-radius: 20px;
+    z-index: -1;
+  }
+}
 
 
 
