refactoring index.pug

--- a/src/index.pug
+++ b/src/index.pug
@@ -4,20 +4,20 @@ html
         meta(charset = "utf-8")
         meta(name = "viewport", content = "initial-scale = 1.0, width = device - width")
         title Toxin
-        div(class="wrapper")
+        div.wrapper
             div(class="content")
-                header(class="header")
-                    img(class = "header__logo" src = "./images/Logo.svg")
-                    nav(class="header__items")
-                        ul(class = "header__navList")
-                            li(class = "header__navLink header__navLink_active") О нас
-                            li(class = "header__navLink") Услуги
-                            li(class = "header__navLink") Вакансии
-                            li(class = "header__navLink") Новости
-                            li(class = "header__navLink") Соглашения
-                    div(class="header__authorization")
-                        button(class="authorization__login-btn")
+                header.header
+                    img.header__logo(src = "./images/Logo.svg")
+                    nav.header__items
+                        ul.header__navList
+                            li.header__navLink.header__navLink_active О нас
+                            li.header__navLink Услуги
+                            li.header__navLink Вакансии
+                            li.header__navLink Новости
+                            li.header__navLink Соглашения
+                    div.header__authorization
+                        button.authorization__login-btn
                             span Войти
-                        button(class="authorization__registration-btn")
+                        button.authorization__registration-btn
                             span Зарегистрироваться
         body
