--- a/src/index.pug
+++ b/src/index.pug
@@ -11,44 +11,50 @@ html
                     +header(false)
                     +header(true)
                     .footer
-                        .footer__logo
-                            img(src = "./images/Logo.svg")
-                            p Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
-                        .footer__navItem.navItem
-                            h2 Навигация
-                            ul.navItem__list
-                                li
-                                    a(href="#") О нас
-                                li
-                                    a(href="#") Новости
-                                li
-                                    a(href="#") Служба поддержки
-                                li
-                                    a(href="#") Услуги
-                        .footer__navItem.navItem
-                            h2 О нас
-                            ul.navItem__list
-                                li
-                                    a(href="#") О сервисе
-                                li
-                                    a(href="#") Наша команда
-                                li
-                                    a(href="#") Вакансии
-                                li
-                                    a(href="#") Инвесторы
-                        .footer__navItem.navItem
-                            h2 Служба поддержки
-                            ul.navItem__list
-                                li
-                                    a(href="#") Соглашения
-                                li
-                                    a(href="#") Сообщества
-                                li
-                                    a(href="#") Связь с нами
-                        .footer__subscription
-                            h2 Подписка
-                            p Получайте специальные предложения и новости сервиса
-                            form
-                                input
-                                button
-                        .copyright © 2018 Toxin отель. Все права защищены.
+                        .footer__footerUp.footerUp
+                            .footer__logo
+                                img(src = "./images/Logo.svg")
+                                p Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
+                            .footer__navItem.navItem
+                                h2 Навигация
+                                ul.navItem__list
+                                    li
+                                        a(href="#") О нас
+                                    li
+                                        a(href="#") Новости
+                                    li
+                                        a(href="#") Служба поддержки
+                                    li
+                                        a(href="#") Услуги
+                            .footer__navItem.navItem
+                                h2 О нас
+                                ul.navItem__list
+                                    li
+                                        a(href="#") О сервисе
+                                    li
+                                        a(href="#") Наша команда
+                                    li
+                                        a(href="#") Вакансии
+                                    li
+                                        a(href="#") Инвесторы
+                            .footer__navItem.navItem
+                                h2 Служба поддержки
+                                ul.navItem__list
+                                    li
+                                        a(href="#") Соглашения
+                                    li
+                                        a(href="#") Сообщества
+                                    li
+                                        a(href="#") Связь с нами
+                            .footer__subscription
+                                h2 Подписка
+                                p Получайте специальные предложения и новости сервиса
+                                form
+                                    input
+                                    button
+                        .footer__footerDown.footerDown
+                            .footerDown__copyright Copyright © 2018 Toxin отель. Все права защищены.
+                            .footerDown__socialNetworkIcons.socialNetworkIcons
+                                img.socialNetworkIcons__twitter(src="./images/twitter.svg")
+                                img.socialNetworkIcons__facebook(src="./images/facebook.svg")
+                                img.socialNetworkIcons__instagram(src="./images/instagram.svg")
