--- a/src/index.pug
+++ b/src/index.pug
@@ -5,56 +5,39 @@ html
         meta(charset = "utf-8")
         meta(name = "viewport", content = "initial-scale = 1.0, width = device - width")
         title Toxin
+        script
+            include script.js
         body
             .wrapper
                 .content
                     +header(false)
                     +header(true)
-                    .footer
-                        .footer__footerUp.footerUp
-                            .footer__logo
-                                img(src = "./images/Logo.svg")
-                                p Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
-                            .footer__navItem.navItem
-                                h2 Навигация
-                                ul.navItem__list
-                                    li
-                                        a(href="#") О нас
-                                    li
-                                        a(href="#") Новости
-                                    li
-                                        a(href="#") Служба поддержки
-                                    li
-                                        a(href="#") Услуги
-                            .footer__navItem.navItem
-                                h2 О нас
-                                ul.navItem__list
-                                    li
-                                        a(href="#") О сервисе
-                                    li
-                                        a(href="#") Наша команда
-                                    li
-                                        a(href="#") Вакансии
-                                    li
-                                        a(href="#") Инвесторы
-                            .footer__navItem.navItem
-                                h2 Служба поддержки
-                                ul.navItem__list
-                                    li
-                                        a(href="#") Соглашения
-                                    li
-                                        a(href="#") Сообщества
-                                    li
-                                        a(href="#") Связь с нами
-                            .footer__subscription
-                                h2 Подписка
-                                p Получайте специальные предложения и новости сервиса
-                                form
-                                    input
-                                    button
-                        .footer__footerDown.footerDown
-                            .footerDown__copyright Copyright © 2018 Toxin отель. Все права защищены.
-                            .footerDown__socialNetworkIcons.socialNetworkIcons
-                                img.socialNetworkIcons__twitter(src="./images/twitter.svg")
-                                img.socialNetworkIcons__facebook(src="./images/facebook.svg")
-                                img.socialNetworkIcons__instagram(src="./images/instagram.svg")
+                    include layouts/includes/footer
+                    include layouts/includes/input
+                    .dropdown
+                        input.dropdown__dropdownInput(type="text" value="Сколько гостей" readonly="readonly")
+                        //include layouts/includes/input
+                        button.dropdown__dropdownBtn(onclick="myFunction()")
+                        .dropdown__dropdownContent.dropdownContent#myDropdown
+                            .dropdownContent__guests.guests
+                                p.guests__textfield Взрослые
+                                .guests__switcher.switcher
+                                    button.switcher__btnMinus(disabled onclick="functionMinus(`guests`)")
+                                    span.switcher__value 555
+                                    button.switcher__btnPlus(onclick="functionPlus(`guests`)")
+                            .dropdownContent__children.children
+                                p.children__textfield Дети
+                                .children__switcher.switcher
+                                    button.switcher__btnMinus(disabled onClick="functionMinus(`children`)")
+                                    span.switcher__value 0
+                                    button.switcher__btnPlus( onclick="functionPlus(`children`)")
+                            .dropdown__toddlers.toddlers
+                                p.toddlers__textfield Младенцы
+                                .toddlers__switcher.switcher
+                                    button.switcher__btnMinus(disabled onclick="functionMinus(`toddlers`)")
+                                    span.switcher__value 0
+                                    button.switcher__btnPlus(onclick="functionPlus(`toddlers`)")
+                            .dropdown__clear
+                                button(onclick="clearValue()") Очистить
+                            .dropdown__toApply
+                                button(onclick="toApply()") Применить
