--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -82,20 +82,21 @@ h1, h2, h3, h4, h5, h6 {
   border-width: 0 2px 2px 0;
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
-  margin: -5px -17px 0px 0px
+  margin: -5px -17px 0px 0px;
 }
 
-%btnMinus{
-  font-size:16px;
+%btnMinus {
+  font-size: 16px;
   background: #FFF;
   color: rgba(31, 32, 65, 0.5);
-  position:relative;
+  position: relative;
   border-radius: 50%;
   width: 30px;
   height: 30px;
   border: 1px solid rgba(31, 32, 65, 0.5);
   position: relative;
-  &::after{
+
+  &::after {
     content: "-";
     position: absolute;
     top: 3.5px;
@@ -103,17 +104,18 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-%btnPlus{
-  font-size:16px;
+%btnPlus {
+  font-size: 16px;
   background: #FFF;
   color: rgba(31, 32, 65, 0.5);
-  position:relative;
+  position: relative;
   border-radius: 50%;
   width: 30px;
   height: 30px;
   border: 1px solid rgba(31, 32, 65, 0.5);
   position: relative;
-  &::after{
+
+  &::after {
     content: "+";
     position: absolute;
     top: 3.75px;
@@ -357,7 +359,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .textField {
-  margin-left: 1px;
 
   input {
     border: 1px solid rgba(31, 32, 65, 0.25);
@@ -385,94 +386,138 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .dropdown {
+  max-width: 320px;
+  height: 44px;
+
+  input {
+    padding-left: 14px;
+    color: rgba(31, 32, 65, 0.75);
+    font-size: 14px;
+  }
 
   &__dropdownInput {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border: 1px solid rgba(31, 32, 65, 0.25);
+    border-radius: 4px;
+
+    cursor: pointer;
+
+    &:focus {
+      border: 1px solid rgba(31, 32, 65, 0.5);
+    }
+
+    &:hover {
+      border: 1px solid rgba(31, 32, 65, 0.5);
+    }
   }
 
   &__dropdownBtn {
-    position: relative;
-    padding: 15px;
+    position: absolute;
     @extend %downArrow;
-    background: #FFF  ;
+    background: #FFF;
+
     &::after {
-      left: 0.85em;
-      top: 50%;
+      top: 20px;
+      right: 35px;
     }
   }
 
   &__dropdownContent {
+    margin-top: -1px;
+    padding-top: 3px;
+    border: 1px solid rgba(31, 32, 65, 0.5);
+    border-radius: 0px 0px 4px 4px;
+    max-width: 320px;
+    height: 160px;
     display: none;
     text-transform: uppercase;
-    & button{
+    font-weight: bold;
+    font-size: 12px;
+    grid-template-rows: 4fr 4fr 4fr 5fr;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 3px;
+    padding-left: 13px;
+
+    & button {
       text-transform: uppercase;
       background: #FFF;
     }
+  }
+  &__clear {
+    font-weight: bold;
+    font-size: 12px;
+    justify-self: start;
+    align-self: end;
+    color: #BC9CFF;
+    display: none;
+    margin-bottom: 12px;
+    &_show{
+      display: grid;
+    }
+  }
+
+  &__toApply {
+    font-weight: bold;
+    font-size: 12px;
+    padding-right: 7px;
+    justify-self: end;
+    align-self: end;
+    color: #BC9CFF;
+    grid-column-start: -2;
+    margin-bottom: 12px;
+  }
+}
+
+
+.itemDropdownContent {
+  display: grid;
+  grid-column: span 2;
+  grid-template-rows: 1fr;
+  grid-template-columns: 3fr 1fr;
+  align-items: center;
+  &__textfield {
   }
 }
 
 .show {
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-areas: "guests ." "children ." "toddlers ." "clear toApply";
 }
 
-.guests {
-  display:grid;
+
+
+
+.switcher {
+  padding-right: 6px;
+  display: grid;
   grid-template-rows: 1fr;
-  grid-template-columns: repeat(2, 1fr);
-  grid-area: guests;
+  grid-template-columns: 1fr 32px 1fr;
+  justify-items: center;
 
-  &__textfield {
 
+  &__value {
+    align-items: center;
+    align-self: center;
   }
-}
 
-.children {
-  @extend .guests;
-  grid-area: children;
-  &__textfield {
-  }
-}
-
-.toddlers {
-  @extend .guests;
-  grid-area: toddlers;
-  &__textfield {
-  }
-}
-
-.dropdown__clear {
-  grid-area: clear;
-  & button{
-    color: #BC9CFF;
-  }
-}
-
-.dropdown__toApply {
-  grid-area: toApply;
-  & button{
-    color: #BC9CFF;
-  }
-}
-
-.switcher{
-  &__btnMinus{
+  &__btnMinus {
     @extend %btnMinus;
+
     &[disabled] {
-    border-color: rgba(31, 32, 65, 0.25);
+      border-color: rgba(31, 32, 65, 0.25);
       color: #D4D5DB;
     }
   }
-  &__btnPlus{
+
+  &__btnPlus {
     @extend %btnPlus;
   }
 }
 
-
-
-
-
-
+.open {
+  border: 1px solid rgba(31, 32, 65, 0.5);
+  border-radius: 4px 4px 0px 0px;
+}
 
 
